--- a/xlink_kme_sbml/notebooks/sbml_minimal_model.ipynb
+++ b/xlink_kme_sbml/notebooks/sbml_minimal_model.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test simple diffusion model\n",
+    "Notebook to validate the simplified (i.e. implicit) diffusion model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
