--- a/xlink_kme_sbml/notebooks/sbml_model_viz.ipynb
+++ b/xlink_kme_sbml/notebooks/sbml_model_viz.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualize sbml/antimony models\n",
+    "Using pyvipr"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
