--- a/xlink_kme_sbml/notebooks/sbml_bug.ipynb
+++ b/xlink_kme_sbml/notebooks/sbml_bug.ipynb
@@ -1,25 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.9-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python36964bitteconda7511187c57f14020a567cc7ef7fbb377",
-   "display_name": "Python 3.6.9 64-bit ('te': conda)"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -45,12 +24,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "<tesbml.libsbml.Reaction; proxy of <Swig Object of type 'Reaction *' at 0x7f9d55c56b70> >"
+      "text/plain": [
+       "<tesbml.libsbml.Reaction; proxy of <Swig Object of type 'Reaction *' at 0x7f9d55c56b70> >"
+      ]
      },
+     "execution_count": 24,
      "metadata": {},
-     "execution_count": 24
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -66,12 +47,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "0"
+      "text/plain": [
+       "0"
+      ]
      },
+     "execution_count": 25,
      "metadata": {},
-     "execution_count": 25
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -84,12 +67,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "'dimensionless'"
+      "text/plain": [
+       "'dimensionless'"
+      ]
      },
+     "execution_count": 26,
      "metadata": {},
-     "execution_count": 26
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -114,5 +99,26 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.6.9 64-bit ('te': conda)",
+   "language": "python",
+   "name": "python36964bitteconda7511187c57f14020a567cc7ef7fbb377"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
