--- a/xlink_kme_sbml/notebooks/sbml_model_viz.ipynb
+++ b/xlink_kme_sbml/notebooks/sbml_model_viz.ipynb
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tellurium as te\n",
     "import pandas as pd\n",
-    "import sbml_sim_helper\n",
+    "#import sbml_sim_helper\n",
     "from scipy.optimize import differential_evolution as diff_evol\n",
     "import pyvipr.tellurium_viz as tviz"
    ]
@@ -40,27 +40,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rr = te.loada(\"../output/model_example_mono_only_comp_antimony.txt\")"
+    "rr = te.loada(\"../../output/model_example_mono_only_3lys_antimony.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7746445a04eb4b7297049e20b4c61f8f",
+       "model_id": "5a416b14166949ef9ea5a23412b5666e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Viz(data=<roadrunner.RoadRunner() { this = 0x55f29c0d07c0 }>, layout_name='cose-bilkent', type_of_viz='sp_view…"
+       "Viz(data=<roadrunner.RoadRunner() { this = 0x55afe9a2da80 }>, layout_name='cose-bilkent', type_of_viz='sp_view…"
       ]
      },
      "metadata": {},
@@ -73,36 +73,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#tviz.sp_comm_louvain_view(rr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#tviz.sp_comm_asyn_lpa_view(rr_c3, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "570fda251b964253996055d7f5233e9b",
+       "model_id": "191d97c8b1d4441fa81f65428e01f499",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Viz(data=<roadrunner.RoadRunner() { this = 0x55f29c0d07c0 }>, layout_name='cose-bilkent', process='consumption…"
+       "Viz(data=<roadrunner.RoadRunner() { this = 0x55afe9a2da80 }>, layout_name='klay', type_of_viz='sp_comm_louvain…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tviz.sp_comm_louvain_view(rr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3f7a2099032b40dfad681530d974b662",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Viz(data=<roadrunner.RoadRunner() { this = 0x55afe9a2da80 }>, layout_name='klay', type_of_viz='sp_comm_asyn_lp…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tviz.sp_comm_asyn_lpa_view(rr, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "498f782ea5cf4c418722bfd61588e9e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Viz(data=<roadrunner.RoadRunner() { this = 0x55afe9a2da80 }>, layout_name='cose-bilkent', process='consumption…"
       ]
      },
      "metadata": {},
