--- a/xlink_kme_sbml/notebooks/sbml_model_viz.ipynb
+++ b/xlink_kme_sbml/notebooks/sbml_model_viz.ipynb
@@ -156,9 +156,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('te': conda)",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
-   "name": "python38564bitteconda37a26dd0c09747d890034224c9347118"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -170,7 +170,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
